Add docker files and gitignore

--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
-HTTP_HOST=127.0.0.1
-HTTP_PORT=8186
-
+HTTP_HOST=0.0.0.0
+HTTP_PORT=9000
 MODEL_NAME=ffhq
-
-# config model file paths in .env.local, e.g.:
-# MODEL_PATH_ffhq=./models/stylegan2-ffhq-config-f.pkl
-
 MODEL_PATH_LPIPS=./models/vgg16_zhang_perceptual.pkl
+MODEL_PATH_ffhq=./models/stylegan2-ffhq-config-f.pkl
+# MODEL_PATH_ffhq=./models/wikiart-snapshot-010101.pkl
+REGULARIZE_NOISE_WEIGHT=1e5
+INITIAL_NOISE_FACTOR=0.05
+EUCLIDEAN_DIST_WEIGHT=1
+REGULARIZE_MAGNITUDE_WEIGHT=0
+UNIFORM_LATENTS=0
+DOCKER_IMAGE=eu.gcr.io/stylegan-258409/stylegan2-web
+DOCKER_IMAGE_VERSION=latest
+LOCAL_USER=1000:1000
