--- a/.env
+++ b/.env
@@ -8,7 +8,11 @@ REGULARIZE_NOISE_WEIGHT=1e5
 INITIAL_NOISE_FACTOR=0.05
 EUCLIDEAN_DIST_WEIGHT=1
 REGULARIZE_MAGNITUDE_WEIGHT=0
-UNIFORM_LATENTS=0
+UNIFORM_LATENTS=1
 DOCKER_IMAGE=eu.gcr.io/stylegan-258409/stylegan2-web
 DOCKER_IMAGE_VERSION=latest
 LOCAL_USER=1000:1000
+TRAEFIK_FRONTEND_RULE=Host:ec2-44-242-110-163.us-west-2.compute.amazonaws.com
+
+TRAEFIK_DOCKER_DOMAIN=ec2-44-242-110-163.us-west-2.compute.amazonaws.com
+TRAEFIK_ACME_EMAIL=bbssbb95@gmail.com
