--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,36 @@ services:
     runtime: nvidia
     volumes:
       - ".:/app/"
-    environment:
-      HTTP_HOST: ${HTTP_HOST:-0.0.0.0}
-      HTTP_PORT: ${HTTP_PORT:- 9000}
-      MODEL_NAME: ${MODEL_NAME:- ffhq}
-      MODEL_PATH_LPIPS: ${MODEL_PATH_LPIPS:- ./models/vgg16_zhang_perceptual.pkl}
-      MODEL_PATH_ffhq: ${MODEL_PATH_ffhq:- ./models/stylegan2-ffhq-config-f.pkl}
-      REGULARIZE_NOISE_WEIGHT: ${REGULARIZE_NOISE_WEIGHT:- 1e5}
-      INITIAL_NOISE_FACTOR: ${INITIAL_NOISE_FACTOR:- 0.05}
-      EUCLIDEAN_DIST_WEIGHT: ${EUCLIDEAN_DIST_WEIGHT:- 1}
-      REGULARIZE_MAGNITUDE_WEIGHT: ${REGULARIZE_MAGNITUDE_WEIGHT:- 0}
-      UNIFORM_LATENTS: ${UNIFORM_LATENTS:- 1}
+    env_file:
+      - .env
     ports:
       - "9000:9000"
-    command: ["python3","./http_server.py"]
+    command: [ "python3","./http_server.py" ]
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=flask"
+      - "traefik.frontend.rule=${TRAEFIK_FRONTEND_RULE}"
+      - "traefik.port=9000"
+      - "traefik.docker.network=traefik"
+
+  traefik:
+    image: traefik:v1.7
+    networks:
+      - traefik
+    env_file:
+      - .env
+    labels:
+      - "traefik.acme.email=${TRAEFIK_ACME_EMAIL:? Missing TRAEFIK_ACME_EMAIL env var.}"
+      - "traefik.docker.domain=${TRAEFIK_DOCKER_DOMAIN:? Missing TRAEFIK_DOCKER_DOMAIN env var.}"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik/traefik.toml:/etc/traefik/traefik.toml:ro
+      - ./traefik/acme:/etc/traefik/acme
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+
+networks:
+  traefik:
+    external: true
