--- a/.env.local
+++ b/.env.local
@@ -9,6 +9,6 @@ INITIAL_NOISE_FACTOR=0.05
 EUCLIDEAN_DIST_WEIGHT=1
 REGULARIZE_MAGNITUDE_WEIGHT=0
 UNIFORM_LATENTS=0
-DOCKER_IMAGE=eu.gcr.io/stylegan-258409/stylegan2-web
+DOCKER_IMAGE=stylegan2-web
 DOCKER_IMAGE_VERSION=latest
 LOCAL_USER=1000:1000
