--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,39 +14,11 @@ services:
     ports:
       - "9000:9000"
     command: [ "python3","./http_server.py" ]
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.backend=flask"
-#      - "traefik.frontend.rule=${TRAEFIK_FRONTEND_RULE}"
-#      - "traefik.port=9000"
-#      - "traefik.docker.network=traefik"
-#
-#  traefik:
-#    image: traefik:v1.7
-#    networks:
-#      - traefik
-#      - default
-#    env_file:
-#      - .env
-#    labels:
-#      - "traefik.acme.email=${TRAEFIK_ACME_EMAIL:? Missing TRAEFIK_ACME_EMAIL env var.}"
-#      - "traefik.docker.domain=${TRAEFIK_DOCKER_DOMAIN:? Missing TRAEFIK_DOCKER_DOMAIN env var.}"
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock:ro
-#      - ./traefik/traefik.toml:/etc/traefik/traefik.toml:ro
-#      - ./traefik/acme:/etc/traefik/acme
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#      - "8080:8080"
-#    command:
-#      --docker \
-#      --docker.watch \
-#      --docker.exposedbydefault=false \
-#      --constraints=tag==${TRAEFIK_TAG} \
-#      --logLevel=DEBUG \
-#      --accessLog \
-#      --web
-#networks:
-#  traefik:
-#    external: true
+  tensorboard:
+    image: tensorboard:${DOCKER_IMAGE_VERSION:-latest}
+    build:
+      context: .
+      dockerfile: ./tensorboard.Dockerfile
+    ports:
+      - 6006:6006
+    command: tensorboard --logdir=/notebooks/graphs
