--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-alias": "^3.0.0",
-		"@rollup/plugin-commonjs": "^11.0.1",
+		"@rollup/plugin-commonjs": "11.0.2",
 		"@rollup/plugin-node-resolve": "^7.0.0",
 		"@rollup/plugin-replace": "^2.3.0",
 		"@vue/eslint-plugin": "^4.2.0",
@@ -24,5 +24,8 @@
 		"stream": "^0.0.2",
 		"vue": "^2.6.8",
 		"vue-template-compiler": "^2.6.8"
+	},
+	"dependencies": {
+		"vue-select": "^3.10.8"
 	}
 }
