--- a/.env
+++ b/.env
@@ -3,8 +3,7 @@ HTTP_PORT=9000
 MODEL_NAME=ffhq
 MODEL_PATH_LPIPS=./models/vgg16_zhang_perceptual.pkl
 MODEL_PATH_ffhq=./models/stylegan2-ffhq-config-f.pkl
-MODEL_PATH_horse=./models/stylegan2-horse-config-f.pkl
-# MODEL_PATH_ffhq=./models/wikiart-snapshot-010101.pkl
+MODEL_PATH_painting=./models/painting_faces.pkl
 REGULARIZE_NOISE_WEIGHT=1e5
 INITIAL_NOISE_FACTOR=0.05
 EUCLIDEAN_DIST_WEIGHT=1
