Use new trained model

--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ MODEL_NAME=ffhq
 MODEL_PATH_LPIPS=./models/vgg16_zhang_perceptual.pkl
 MODEL_PATH_ffhq=./models/stylegan2-ffhq-config-f.pkl
 MODEL_PATH_painting=./models/painting_faces.pkl
-MODEL_PATH_custom_network=./models/network-snapshot-000020.pkl
+#MODEL_PATH_custom_network=./models/network-snapshot-000020.pkl
+MODEL_PATH_custom_network_latest=./models/network-snapshot-000010.pkl
 REGULARIZE_NOISE_WEIGHT=1e5
 INITIAL_NOISE_FACTOR=0.05
 EUCLIDEAN_DIST_WEIGHT=1
