Use new trained models

--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ MODEL_PATH_ffhq=./models/stylegan2-ffhq-config-f.pkl
 MODEL_PATH_painting=./models/painting_faces.pkl
 #MODEL_PATH_custom_network=./models/network-snapshot-000020.pkl
 MODEL_PATH_custom_network_latest=./models/network-snapshot-000010.pkl
+MODEL_PATH_3_model_128=./models/blended-128-ffhq-custom.pkl
+MODEL_PATH_3_model_64=./models/blended-64-ffhq-custom.pkl
+MODEL_PATH_3_model_32=./models/blended-32-ffhq-custom.pkl
 REGULARIZE_NOISE_WEIGHT=1e5
 INITIAL_NOISE_FACTOR=0.05
 EUCLIDEAN_DIST_WEIGHT=1
