--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"vue-template-compiler": "^2.6.8"
 	},
 	"dependencies": {
-		"vue-select": "^3.10.8"
+		"vue-select": "^3.10.8",
+		"vue2-dropzone": "^3.6.0"
 	}
 }
